Install angular with tasks controller

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,1 +1,8 @@
 <h1>All Tasks</h1>
+
+<div ng-app="app">
+  {{ 1 + 1 }}
+  <div ng-controller="tasksCtrl">
+    <p>{{ task1 }}</p>
+  </div>
+</div>
