--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -4,5 +4,9 @@
   {{ 1 + 1 }}
   <div ng-controller="tasksCtrl">
     <p>{{ task1 }}</p>
+    <p>{{ task2 }}</p>
+    <p>{{ task3 }}</p>
+    <p>{{ message }}</p>
+    <input type="text" ng-model="message">
   </div>
 </div>
