--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -3,10 +3,9 @@
 <div ng-app="app">
   {{ 1 + 1 }}
   <div ng-controller="tasksCtrl">
-    <p>{{ task1 }}</p>
-    <p>{{ task2 }}</p>
-    <p>{{ task3 }}</p>
-    <p>{{ message }}</p>
-    <input type="text" ng-model="message">
+    <div ng-repeat="task in tasks">
+      <p>{{ task }}</p>
+      <input ng-model="task">
+    </div>
   </div>
 </div>
