Add button to add new task with ng-click

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -7,5 +7,8 @@
       <p>{{ task }}</p>
       <input ng-model="task">
     </div>
+    <h3>Add a new task</h3>
+    <input ng-model="newTask">
+    <button ng-click="addTask(newTask)">Add task</button>
   </div>
 </div>
