--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -4,7 +4,7 @@
   {{ 1 + 1 }}
   <div ng-controller="tasksCtrl">
     <div ng-repeat="task in tasks">
-      <p>{{ task }}</p>
+      <p ng-click="completeTask(task)">{{ task }}</p>
       <input ng-model="task">
     </div>
     <h3>Add a new task</h3>
